setting the errors in the reducers back to null when we call the start actions. scrolling down upon page load when we load the chatScreen component. Fixing problem of the input to send a message being see through, where we could see the messages behind it.

--- a/src/containers/Messaging/ChatScreen/ChatScreen.css
+++ b/src/containers/Messaging/ChatScreen/ChatScreen.css
@@ -28,7 +28,6 @@
 
 .input{
   display: flex;
-  padding: 5px;
   position: fixed;
   bottom: 0;
   width: 100%;
